# 3dof-acrobot

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  MUJOCO_LOG.TXT  README.md  clean.py  err.txt  main.py  main_2dof.py  main_3dof.py  main_3dof_addon.py  tau.py  test.txt  test1.txt  test2.txt  testmain.py  torque1.txt  u.txt
core/: 2dof_motion_test.py  3dof_motion_test.py  com_test.py  main.cpp  main.cpp~
docker/: Dockerfile  Dockerfile~
model/: 3dof_acrobot.xml  moew.xml  test_rod.xml  test_rod_2dof.xml  test_roddy.xml
